force-app/main/default/objects/Opportunity/fields/Acomodacao__c.field-meta.xml
<CustomField>
    <fullName>Acomodacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acomodação</label>
    <referenceTo>Acomodacao__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>