force-app/main/default/objects/Opportunity/fields/Escola__c.field-meta.xml
<CustomField>
    <fullName>Escola__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escola</label>
    <referenceTo>Escola__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>