force-app/main/default/objects/Opportunity/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Estado__c.Pais__c</field>
            <operation>equals</operation>
            <valueField>$Source.Pais__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>