force-app/main/default/objects/Opportunity/fields/Numero_Localizacao__c.field-meta.xml
<CustomField>
    <fullName>Numero_Localizacao__c</fullName>
    <label>Numero de localização</label>
    <length>100</length>
    <type>Text</type>
</CustomField>