force-app/main/default/objects/Opportunity/fields/Quantidade_Semanas__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Semanas__c</fullName>
    <label>Quantidade de semanas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>