force-app/main/default/objects/Opportunity/fields/valor_acomodacao__c.field-meta.xml
<CustomField>
    <fullName>valor_acomodacao__c</fullName>
    <formula>Quantidade_Semanas__c  *  Acomodacao__r.Valor_Semana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Acomodacao</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>