force-app/main/default/objects/Opportunity/fields/Valor_Curso_General__c.field-meta.xml
<CustomField>
    <fullName>Valor_Curso_General__c</fullName>
    <formula>Quantidade_Semanas__c  * Escola__r.Valor_Semana_General__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor total general</inlineHelpText>
    <label>Valor do curso General</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>