force-app/main/default/objects/Opportunity/fields/Valor_Curso_PartTime__c.field-meta.xml
<CustomField>
    <fullName>Valor_Curso_PartTime__c</fullName>
    <formula>Quantidade_Semanas__c *  Escola__r.Valor_Semana_Part_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor do curso partTime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>