force-app/main/default/objects/Opportunity/fields/Valor_Total_Curso__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Curso__c</fullName>
    <formula>Valor_Curso_General__c  +  valor_acomodacao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total Curso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>