force-app/main/default/objects/Opportunity/fields/Voo_Direto__c.field-meta.xml
<CustomField>
    <fullName>Voo_Direto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voo Direto</label>
    <type>Checkbox</type>
</CustomField>